[gd_scene load_steps=6 format=3 uid="uid://c42auk0ldtuiw"]

[ext_resource type="Texture2D" uid="uid://cxxrahw5fj6h8" path="res://Scenes/GO/Go_bg.png" id="1_dnk5a"]
[ext_resource type="Texture2D" uid="uid://ccxo0r6e3qoaw" path="res://Scenes/GO/GO.png" id="2_dnk5a"]
[ext_resource type="Script" uid="uid://b7udxnoxkwy8e" path="res://Scenes/GO/menu.gd" id="3_2rcna"]
[ext_resource type="Texture2D" uid="uid://nxo4do8uy4vv" path="res://Scenes/GO/GO_exit.png" id="4_2nvgp"]
[ext_resource type="Texture2D" uid="uid://bqpralxypfwrn" path="res://Scenes/GO/GO_button.png" id="5_58d7q"]

[node name="GoMenu" type="Node2D"]

[node name="GO_bg" type="TextureRect" parent="."]
offset_left = 5.0
offset_top = 3.0
offset_right = 1160.0
offset_bottom = 656.0
texture = ExtResource("1_dnk5a")
expand_mode = 2

[node name="GO_title" type="TextureRect" parent="GO_bg"]
layout_mode = 0
offset_left = 448.0
offset_top = -15.0
offset_right = 706.0
offset_bottom = 206.0
texture = ExtResource("2_dnk5a")
expand_mode = 1

[node name="MENU" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 225.0
offset_top = 294.0
offset_right = 265.0
offset_bottom = 334.0
script = ExtResource("3_2rcna")

[node name="TextureRect" type="TextureRect" parent="MENU"]
layout_mode = 0
offset_left = 750.0
offset_top = -297.0
offset_right = 898.0
offset_bottom = -161.0
texture = ExtResource("4_2nvgp")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MENU"]
layout_mode = 0
offset_left = -208.0
offset_top = -290.0
offset_right = 135.0
offset_bottom = 71.0
texture = ExtResource("5_58d7q")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MENU"]
offset_left = -214.0
offset_top = -131.0
offset_right = 136.0
offset_bottom = 228.0
texture = ExtResource("5_58d7q")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="MENU"]
offset_left = -217.0
offset_top = 34.0
offset_right = 138.0
offset_bottom = 376.0
texture = ExtResource("5_58d7q")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MENU"]
layout_mode = 0
offset_left = -15.0
offset_top = -98.0
offset_right = 67.0
offset_bottom = 230.0

[node name="Play" type="Button" parent="MENU"]
layout_mode = 2
offset_left = -134.0
offset_top = -164.0
offset_right = 50.0
offset_bottom = -63.0
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="Settings" type="Button" parent="MENU"]
layout_mode = 2
offset_left = -193.0
offset_top = 143.0
offset_right = 128.0
offset_bottom = 264.0
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="Rules" type="Button" parent="MENU"]
layout_mode = 2
offset_left = -189.0
offset_top = -18.0
offset_right = 128.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 50
text = "RULES
"

[node name="Exit" type="Button" parent="MENU"]
layout_mode = 2
offset_left = 781.0
offset_top = -267.0
offset_right = 871.0
offset_bottom = -189.0
theme_override_font_sizes/font_size = 50
text = "X
"

[connection signal="pressed" from="MENU/Play" to="MENU" method="_on_play_pressed"]
[connection signal="pressed" from="MENU/Settings" to="MENU" method="_on_settings_pressed"]
[connection signal="pressed" from="MENU/Rules" to="MENU" method="_on_rules_pressed"]
[connection signal="pressed" from="MENU/Exit" to="MENU" method="_on_exit_pressed"]
